# Album

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/hust/album/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  log.h  net.cpp
app/src/main/cpp/index/: CMakeLists.txt  UnionFind.cpp  UnionFind.h  index.cpp
app/src/main/java/hust/album/: FullImageActivity.java  MainActivity.java  SettingsFragment.java
app/src/main/java/hust/album/adapter/: CommonAdapter.java  ImageAdapter.java  ItemDecoration.java  ListRecyclerViewAdapter.java  RAdapter.java  RecyclerViewAdapter.java  ViewPagerItemDecoration.java
app/src/main/java/hust/album/dbscan/: DBSCANClusterer.java  DBSCANClusteringException.java  DistanceMetric.java
app/src/main/java/hust/album/entity/: Image.java  Item.java  ListItem.java
app/src/main/java/hust/album/ffmpeg/: FFmpegHandler.java  FFmpegProc.java
app/src/main/java/hust/album/jni/: FeatureExtractor.java  Index.java
app/src/main/java/hust/album/util/: ParameterConfig.java
app/src/main/res/drawable/: download.xml
app/src/main/res/layout/: activity_full_image.xml  activity_main.xml  item_4_image.xml  item_big_image.xml  item_list_view.xml  item_small_image.xml  item_title.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  style.xml
app/src/main/res/xml/: fragment_setting.xml
app/src/test/java/hust/album/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
